--- a/BackEndLearning/Practice/Practice1/3 String/3 String.csproj
+++ b/BackEndLearning/Practice/Practice1/3 String/3 String.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
+    <RootNamespace>_3_String</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
