--- a/BackEndLearning/Practice/Practice5/Practice5/Practice5/Practice5.csproj
+++ b/BackEndLearning/Practice/Practice5/Practice5/Practice5/Practice5.csproj
@@ -7,10 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
-    <Folder Include="Filters\" />
-    <Folder Include="ViewModels\" />
+    <PackageReference Include="MySql.Data" Version="9.1.0" />
   </ItemGroup>
 
 </Project>
