--- a/BackEndLearning/Practice/Practice5/Practice5/Practice5/appsettings.Development.json
+++ b/BackEndLearning/Practice/Practice5/Practice5/Practice5/appsettings.Development.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "DBConnection": "server=localhost;port=3306;database=practice5;user=root;password=m0106192015zhql"
+  "DBConnection": "server=localhost;port=3306;database=practice5;user=root;password=m0106192015zhql",
+
+  "JWTConfig": {
+    "SecretKey": "moocsssa1234566@!3fdsf123568#aa2sfadf!",
+    "Issuer": "mooc",
+    "Audience": "mooc",
+    "ExpireSecondes": 21600
+  }
 }
