--- a/FrontEndLearning/routing-contextapi-practice/tsconfig.json
+++ b/FrontEndLearning/routing-contextapi-practice/tsconfig.json
@@ -9,7 +9,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["react", "react-dom"]
+    "types": ["react", "react-dom", "@types/jest", "@testing-library/jest-dom"],
   },
   "include": ["src"]
 }
